# Chess

./: CMakeLists.txt
include/engine/: attacktree.h  board.h  move.h  piece.h
include/gui/: boardmanager.h  chessboard.h  chesspiece.h
src/: main.cpp
src/engine/: attacktree.cpp  board.cpp  piece.cpp
src/gui/: boardmanager.cpp  chessboard.cpp  chesspiece.cpp
